--- a/balsa/pages/import_select.html
+++ b/balsa/pages/import_select.html
@@ -13,6 +13,7 @@
     <article>
       <!-- uploads file to blobstore -->
       <form action="{{ upload_url }}" enctype="multipart/form-data" method="post">
+        <input name="action" type="hidden" value="import">
         <div><label>Import file:</label></div>
         <div><input type="file" name="osmdata"/></div>
         <p>You may use a zip compressed file.</p>
