--- a/balsa/pages/confirm_update.html
+++ b/balsa/pages/confirm_update.html
@@ -7,22 +7,22 @@
     <title>Admin page - Confirm update stops, stations & places</title>
 
     <article>
-        <table>
+        <table class="balsa-table">
             <tr>
                 <td></td>
-                <td>STOP</td>
-                <td>STATION</td>
-                <td>PLACE</td>
-                <td>Location zoom</td>
+                <td class='balsa-table balsa-table-header'>STOP</td>
+                <td class='balsa-table balsa-table-header'>STATION</td>
+                <td class='balsa-table balsa-table-header'>PLACE</td>
+                <td class='balsa-table balsa-table-header'>Location zoom</td>
             </tr>
             <tr>
-                <td>updated (awaiting confirmation)</td>
-                <td>{{update_num_stops}}</td>
-                <td>{{update_num_stations}}</td>
-                <td>{{update_num_places}}</td>
-                <td>
-                  <form action="/update/confirm/update/next" method="get">
-                      <input type="hidden" name="key" value="{{compare.key}}">
+                <td class='balsa-table balsa-table-col-1'>updated (awaiting confirmation)</td>
+                <td class='balsa-table balsa-table-col'>{{update_num_stops}}</td>
+                <td class='balsa-table balsa-table-col'>{{update_num_stations}}</td>
+                <td class='balsa-table balsa-table-col'>{{update_num_places}}</td>
+                <td class='balsa-table balsa-table-col'>
+                  <form action="/update/confirm/update" method="get">
+                      <input type="hidden" name="offset" value="{{offset}}">
                       <input class="button" type="submit" value="Next"/>
                   </form>
                 </td>
@@ -31,27 +31,27 @@
     </article>
 
     <header>
-      <h1>Please check updated stop:<h1>
+      <h2 class="balsa-space">Please check updated stop:<h2>
     </header>
 
     <article>
-        <table>
+        <table class="balsa-table">
             <tr>
                 <td></td>
-                <td>Production</td>
-                <td>Updated</td>
+                <td class='balsa-table balsa-table-header'>Production</td>
+                <td class='balsa-table balsa-table-header'>Updated</td>
             </tr>
             {% for attr in compare.data %}
               <tr>
-                <td>{{ attr.type }}</td>
-                <td>{{ attr.production }}</td>
-                <td>{{ attr.update }}</td>
+                <td class='balsa-table balsa-table-col-1'>{{ attr.type }}</td>
+                <td class='balsa-table balsa-table-col-1 {{attr.style}}'>{{ attr.production }}</td>
+                <td class='balsa-table balsa-table-col-1 {{attr.style}}'>{{ attr.update }}</td>
               </tr>
             {% endfor %}
             <tr>
                 <td></td>
                 <td></td>
-                <td>
+                <td class='balsa-table balsa-table-col'>
                   <form action="/update/confirm/update/accept" method="get">
                       <input type="hidden" name="key" value="{{compare.key}}">
                       <input class="button" type="submit" value="Accept"/>
