Won't run fast enough as is

--- a/site/balsa_contact.html
+++ b/site/balsa_contact.html
@@ -3,7 +3,7 @@
   <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <title>Balsa.cl - Contact</title>
-    <link rel="stylesheet" media="all" href="balsa_site.css">
+    <link rel="stylesheet" media="all" href="balsa.css">
   </head>
   <body>
     <div id="balsa-content">
